add translations for regulatory statements plugin

--- a/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
+++ b/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
@@ -1,6 +1,6 @@
 <AuList::Item>
   <AuButton @icon="add" @iconAlignment="left" @skin="link" {{on 'click' this.toggleModal}}>
-    Reglement Invoegen
+    {{t "regulatoryStatementsPlugin.insertStatement"}}
   </AuButton>
 </AuList::Item>
 
