--- a/app/components/editor-plugins/regulatory-statements/search-modal.hbs
+++ b/app/components/editor-plugins/regulatory-statements/search-modal.hbs
@@ -1,15 +1,21 @@
-<AuModal @modalOpen={{@enabled}} @title="Reglement invoegen" @size="large" @padding="none" @closeModal={{@closeModal}}
+<AuModal @modalOpen={{@enabled}} @title={{t "regulatoryStatementsPlugin.insertStatement"}} @size="large" @padding="none" @closeModal={{@closeModal}}
   as |modal|>
   <modal.Body>
     <AuMainContainer class="citaten--main-container" as |mc|>
       <mc.sidebar class="citaten--sidebar" @scroll={{true}}>
         <div class="au-c-sidebar">
           <div class="au-c-sidebar__content au-u-padding">
-            <AuInput id="searchtermexpanded" @type="text" @width="block" @icon="search" @iconAlignment="right"
+            <AuInput
+              id="searchtermexpanded"
+              @type="text"
+              @width="block"
+              @icon="search"
+              @iconAlignment="right"
+              placeholder={{t "regulatoryStatementsPlugin.search"}}
               @value={{this.searchQuery}} />
             <AuHr @size="large" />
             {{#if this.regulatoryStatements.isLoading}}
-            <AuLoader @message="Aan het laden" />
+            <AuLoader @message={{t "regulatoryStatementsPlugin.loading"}} />
             {{else}}
             <ul class="au-c-list-navigation">
               {{#each this.regulatoryStatements.records as |statement|}}
@@ -39,17 +45,17 @@
             </div>
           </div>
           {{else}}
-          <p>Geen reglement geselecteerd</p>
+          <p>{{t "regulatoryStatementsPlugin.noStatementSelected"}}</p>
           {{/if}}
           <div class="au-c-modal__footer">
             <AuToolbar>
               <AuToolbarGroup>
-                <AuButton @skin="link" {{on "click" @closeModal}}>Annuleer</AuButton>
+                <AuButton @skin="link" {{on "click" @closeModal}}>{{t "regulatoryStatementsPlugin.cancel"}}</AuButton>
               </AuToolbarGroup>
               <AuToolbarGroup>
                 <AuButton @disabled={{not this.selectedStatement}} {{on "click" (fn @insertStatement
                   this.selectedStatement)}}>
-                  Reglement invoegen
+                  {{t "regulatoryStatementsPlugin.insertStatement"}}
                 </AuButton>
               </AuToolbarGroup>
             </AuToolbar>
