disable no-shadowed-elements template lint

--- a/app/components/editor-plugins/regulatory-statements/view.hbs
+++ b/app/components/editor-plugins/regulatory-statements/view.hbs
@@ -5,6 +5,7 @@
   resource={{this.uri}}
   typeof="besluitpublicatie:Documentonderdeel"
    as |section|>
+  {{!-- template-lint-disable no-shadowed-elements --}}
   <section>
     <AuToolbar as |Group|>
       <Group>
