prevent duplicate imports of a regulatory statement in a decision

--- a/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
+++ b/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
@@ -4,5 +4,5 @@
   </AuButton>
 </AuList::Item>
 {{#if this.modalEnabled}}
-<EditorPlugins::RegulatoryStatements::SearchModal @closeModal={{this.toggleModal}} @insertStatement={{this.insertRegulatoryStatement}}/>
+<EditorPlugins::RegulatoryStatements::SearchModal @closeModal={{this.toggleModal}} @insertStatement={{this.insertRegulatoryStatement}} @controller={{@controller}}/>
 {{/if}}
