disable 'insert statement' button if there is not besluit present

--- a/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
+++ b/app/components/editor-plugins/regulatory-statements/sidebar-insert.hbs
@@ -1,5 +1,5 @@
 <AuList::Item>
-  <AuButton @icon="add" @iconAlignment="left" @skin="link" {{on 'click' this.toggleModal}}>
+  <AuButton @icon="add" @iconAlignment="left" @skin="link" {{on 'click' this.toggleModal}} @disabled={{this.isDisabled}}>
     {{t "regulatoryStatementsPlugin.insertStatement"}}
   </AuButton>
 </AuList::Item>
