--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -11,7 +11,7 @@
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-4@small au-u-1-2@medium au-u-text-right@medium">
-            <AcmidmLogin />
+            <a class="au-c-button au-c-button--primary" href={{this.loginUrl}}>Meld u aan</a>
           </div>
         </div>
       </div>
