disable editing of regulatory statement if it has been published

--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -30,7 +30,7 @@
     <Group>
       <div>
         {{#unless @editorDocument.isNew}}
-          <EditorStatusPill @status={{@documentContainer.status}} />
+          <EditorStatusPill @status={{this.documentStatus}} />
         {{/unless}}
         {{#if @editorDocument.isNew}}
           <AuPill @skin="warning">
