--- a/app/templates/inbox/regulatory-statements.hbs
+++ b/app/templates/inbox/regulatory-statements.hbs
@@ -47,7 +47,7 @@
     <c.body as |container|>
       {{#let container.currentVersion as |row|}}
         <td>
-          <AuLink @route="regulatory-statements.edit" @model={{container.id}}>{{row.title}}</AuLink>
+          <RegulatoryStatementLink @documentContainer={{container}} @readOnly={{this.readOnly}}/>
         </td>
         <td>
           {{human-friendly-date row.updatedOn}}
