--- a/app/templates/regulatory-statements/show.hbs
+++ b/app/templates/regulatory-statements/show.hbs
@@ -1,6 +1,7 @@
 <AppChrome
   @editorDocument={{this.model.editorDocument}}
   @documentContainer={{this.model.documentContainer}}
+  @documentStatus={{this.model.documentContainer.currentVersion.status}}
 >
   <:return-link>
   <AuLink @route="inbox.regulatory-statements" @model={{@meetingId}}>
@@ -25,27 +26,12 @@
         {{#unless this.readOnly}}
           <div class="au-o-box au-o-box--small au-u-background-gray-100">
             <AuAlert @icon="info-circle" @title="Niet editeerbaar"  @skin="info" @size="small" class="au-u-margin-bottom-none">
-              <p>Dit artikel is reeds gepubliceerd. Gepubliceerde agendapunten zijn niet editeerbaar.</p>
+              <p>Dit reglement is reeds gepubliceerd. Gepubliceerde reglementaire bijlagen zijn niet editeerbaar.</p>
             </AuAlert>
           </div>
         {{/unless}}
         <div class="say-editor rdfa-annotations rdfa-annotations-hover rdfa-annotations--disabled">
           <div class="say-editor__paper">
-            {{#if this.copyAgendapunt.isRunning}}
-            <div class="au-c-scanner">
-              <div class="au-c-scanner__text">
-                <AuLoader @padding="small" />
-                <AuHelpText @size="large">
-                  {{#if this.saveTask.isRunning}}
-                    Bezig met opslaan
-                  {{else}}
-                    Kopie aan het maken
-                  {{/if}}
-                </AuHelpText>
-              </div>
-              <span class="au-c-scanner__bar"></span>
-            </div>
-            {{/if}}
             <div class="say-editor__inner say-content say-content--disabled">
               {{ this.model.editorDocument.htmlSafeContent }}
             </div>
