--- a/app/components/editor-plugins/regulatory-statements/view.hbs
+++ b/app/components/editor-plugins/regulatory-statements/view.hbs
@@ -14,12 +14,9 @@
       </Group>
       <Group>
         <AuButtonGroup>
-          <AuLinkExternal
-            @icon="pencil"
-            @skin="naked"
-            href={{this.url}}>
-            {{t "regulatoryStatementsPlugin.editStatement"}}
-          </AuLinkExternal>
+          {{#if this.documentContainer}}
+          <RegulatoryStatementLink @icon="pencil" @documentContainer={{this.documentContainer}} @label={{t "regulatoryStatementsPlugin.editStatement"}}/>
+          {{/if}}
           <AuButton @skin="naked" @icon="link-broken" @alert="true" {{on "click" this.detach}}>
             {{t "regulatoryStatementsPlugin.detachStatement"}}
           </AuButton>
