--- a/app/components/app-chrome.hbs
+++ b/app/components/app-chrome.hbs
@@ -44,6 +44,7 @@
         @readOnly={{or @readOnly (not @allowTitleUpdate)}}
         @onSubmit={{@onTitleUpdate}}
       />
+      {{yield to="actions-after-title"}}
     </Group>
     <Group>
       {{yield to="actions"}}
