--- a/app/templates/regulatory-statements/revisions.hbs
+++ b/app/templates/regulatory-statements/revisions.hbs
@@ -4,11 +4,32 @@
   @documentStatus={{this.model.documentContainer.currentVersion.status}}
 >
   <:return-link>
-  <AuLink @route="inbox.regulatory-statements" @model={{@meetingId}}>
+  <AuLink @route="regulatory-statements.edit" @model={{this.model.documentContainer.id}}>
     <AuIcon @icon="arrow-left" @alignment="left" />
-    {{t 'inbox.regulatoryStatements.return'}}
+    {{t 'inbox.regulatoryStatements.revisionsReturn'}}
   </AuLink>
   </:return-link>
+  <:actions-after-title>
+    <AuDropdown @title={{human-friendly-date this.model.editorDocument.updatedOn}} @buttonLabel={{human-friendly-date this.model.editorDocument.updatedOn}} @alignment="left">
+      <LinkTo @route="regulatory-statements.edit" @model={{this.model.documentContainer.id}} class="au-u-padding-small" style="white-space: nowrap; color: black; text-decoration: none;">
+        <span class="au-u-bold au-u-margin-right-large">{{t 'utils.actualVersion'}}: </span>
+        <span class="au-u-light">{{human-friendly-date this.model.currentVersion.updatedOn}}</span>
+      </LinkTo>
+      <AuHr />
+      <div class="au-u-margin-small au-u-flex--column au-u-flex">
+        <p class="au-u-muted">{{t 'utils.history'}}: </p>
+        {{#each this.model.revisions as |revision|}}
+          <AuLink @route="regulatory-statements.revisions" @skin="secondary" role="menuitem" @models={{array this.model.documentContainer.id revision.id}}>
+            {{human-friendly-date revision.updatedOn}}
+          </AuLink>
+        {{/each}}
+        <AuButton @skin="link" role="menuitem" >
+          <AuIcon @icon="clock" @alignment="left" />
+          {{t 'utils.fullHistory'}}
+        </AuButton>
+      </div>
+    </AuDropdown>
+  </:actions-after-title>
   <:actions>
   <AuDropdown @title={{t "utils.fileOptions"}} @buttonLabel={{t "utils.fileOptions"}} @alignment="right">
     <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
@@ -16,6 +37,9 @@
       {{t "utils.htmlExport"}}
     </AuButton>
   </AuDropdown>
+  <AuButton {{on "click" (perform this.restoreTask)}} @disabled={{this.restoreTask.isRunning}}>
+    {{t "utils.restore"}}
+  </AuButton>
   </:actions>
 </AppChrome>
 
