--- a/app/templates/regulatory-statements/revisions.hbs
+++ b/app/templates/regulatory-statements/revisions.hbs
@@ -15,8 +15,8 @@
     </:return-link>
     <:actions-after-title>
       <AuDropdown @title={{human-friendly-date this.model.editorDocument.updatedOn}} @buttonLabel={{human-friendly-date this.model.editorDocument.updatedOn}} @alignment="left">
-        <LinkTo @route="regulatory-statements.edit" @model={{this.model.documentContainer.id}} class="au-u-padding-small" style="white-space: nowrap; color: black; text-decoration: none;">
-          <span class="au-u-bold au-u-margin-right-large">{{t 'utils.actualVersion'}}: </span>
+        <LinkTo @route="regulatory-statements.edit" @model={{this.model.documentContainer.id}} class="au-u-padding-small regulatory-statement-current-version-container">
+          <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
           <span class="au-u-light">{{human-friendly-date this.model.currentVersion.updatedOn}}</span>
         </LinkTo>
         <AuHr />
