--- a/app/templates/regulatory-statements/revisions/history.hbs
+++ b/app/templates/regulatory-statements/revisions/history.hbs
@@ -2,5 +2,6 @@
 <DocumentHistory 
   @documentContainerId={{this.model.documentContainer.id}}
   @currentVersion={{this.model.currentVersion}}
+  @currentRevisionId={{this.model.editorDocument.id}}
 />
 {{outlet}}
