--- a/app/components/document-history.hbs
+++ b/app/components/document-history.hbs
@@ -8,21 +8,21 @@
   @closeModal={{this.goBack}}
    as |Modal| >
   <Modal.Body>
-    {{#if this.args.isCurrentVersion}}
+    {{#if @isCurrentVersion}}
       <p class="au-u-padding-small regulatory-statement-current-version-container-active">
         <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
-        <span class="au-u-light">{{human-friendly-date this.args.currentVersion.updatedOn}}</span>
+        <span class="au-u-light">{{human-friendly-date @currentVersion.updatedOn}}</span>
       </p>
     {{else}}
-      <LinkTo @route="regulatory-statements.edit" @model={{this.args.documentContainerId}} class="au-u-padding-small regulatory-statement-current-version-container">
+      <LinkTo @route="regulatory-statements.edit" @model={{@documentContainerId}} class="au-u-padding-small regulatory-statement-current-version-container">
         <span class="au-u-bold au-u-margin-right-large">{{t 'utils.currentVersion'}}: </span>
-        <span class="au-u-light">{{human-friendly-date this.args.currentVersion.updatedOn}}</span>
+        <span class="au-u-light">{{human-friendly-date @currentVersion.updatedOn}}</span>
       </LinkTo>
     {{/if}}
     <AuHr />
     <div class="au-u-margin-small au-u-flex--column au-u-flex">
       {{#each this.revisions as |revision|}}
-        <AuLink @route="regulatory-statements.revisions" @skin="secondary" role="menuitem" @models={{array this.args.documentContainerId revision.id}}>
+        <AuLink @route="regulatory-statements.revisions" @skin="secondary" role="menuitem" @models={{array @documentContainerId revision.id}}>
           {{human-friendly-date revision.updatedOn}}
         </AuLink>
       {{/each}}
