integrate new prosemirror-based editor

--- a/app/components/rdfa-editor-container.hbs
+++ b/app/components/rdfa-editor-container.hbs
@@ -33,6 +33,9 @@
       @editorOptions={{this.editorOptions}}
       @toolbarOptions={{this.toolbarOptions}}
       @plugins={{this.plugins}}
+      @widgets={{this.widgets}}
+      @schema={{this.schema}}
+      @nodeViews={{this.nodeViews}}
     />
   </AuBodyContainer>
 {{/if}}
