get regulatory statement ember-node working

--- a/app/components/editor-plugins/regulatory-statements/view.hbs
+++ b/app/components/editor-plugins/regulatory-statements/view.hbs
@@ -2,7 +2,7 @@
   @active="true"
   {{did-insert this.didInsert}}
   property="dct:hasPart"
-  resource={{this.uri}}
+  resource={{this.resource}}
   typeof="besluitpublicatie:Documentonderdeel"
    as |section|>
   {{!-- template-lint-disable no-shadowed-elements --}}
