--- a/app/components/editor-document-title.hbs
+++ b/app/components/editor-document-title.hbs
@@ -1,6 +1,6 @@
 {{#if @readOnly}}
   <h1 class="au-c-app-chrome__title">
-    {{this.title}}
+    {{limit-content this.title 70}} 
   </h1>
 {{else}}
   {{#if this.active}}
@@ -10,15 +10,27 @@
           <AuLabel for={{id}} class="au-u-hidden-visually">
             agendapunt titel
           </AuLabel>
-          <input
-            class="au-c-app-chrome__title-input"
-            placeholder="Naamloos document"
-            id={{id}}
-            type="text"
-            value={{this.title}}
-            {{on "input" this.setTitle}}
-            {{did-insert this.focus}}
-          />
+          {{#if this.error}}
+            <input
+              class="au-c-app-chrome__title-input au-c-input--error "
+              placeholder="Naamloos document"
+              id={{id}}
+              type="text"
+              value={{this.title}}
+              {{on "input" this.setTitle}}
+              {{did-insert this.focus}}
+            />
+          {{else}}
+            <input
+              class="au-c-app-chrome__title-input"
+              placeholder="Naamloos document"
+              id={{id}}
+              type="text"
+              value={{this.title}}
+              {{on "input" this.setTitle}}
+              {{did-insert this.focus}}
+            />
+          {{/if}}
         {{/let}}
         <AuButton
           type="submit"
@@ -31,7 +43,8 @@
     </form>
   {{else}}
     <h1 class="au-c-app-chrome__title au-c-app-chrome__title--edit">
-      {{this.title}} <AuButton {{on "click" this.toggleActive}} @icon="pencil" @skin="tertiary" @hideText={{true}} >titel wijzigen</AuButton>
+      {{limit-content this.title 70}} 
+      <AuButton {{on "click" this.toggleActive}} @icon="pencil" @skin="tertiary" @hideText={{true}} >titel wijzigen</AuButton>
     </h1>
   {{/if}}
 
