--- a/app/templates/regulatory-statements/revisions.hbs
+++ b/app/templates/regulatory-statements/revisions.hbs
@@ -57,7 +57,7 @@
           {{#unless this.readOnly}}
             <div class="au-o-box au-o-box--small au-u-background-gray-100">
               <AuAlert @icon="info-circle" @title="Niet editeerbaar"  @skin="info" @size="small" class="au-u-margin-bottom-none">
-                <p>Dit reglement is reeds gepubliceerd. Gepubliceerde reglementaire bijlagen zijn niet editeerbaar.</p>
+                <p>Dit is een oude versie. Herstel deze versie om nieuwe wijzigingen door te voeren.</p>
               </AuAlert>
             </div>
           {{/unless}}
